--- a/.bra.toml
+++ b/.bra.toml
@@ -2,7 +2,7 @@
 init_cmds = [
   ["go", "run", "build.go", "-dev", "build-cli"],
   ["go", "run", "build.go", "-dev", "build-server"],
-  ["./bin/grafana-server", "-packaging=dev", "cfg:app_mode=development"]
+  ["./bin/grafana-server", "-profile", "-packaging=dev", "cfg:app_mode=development"]
 ]
 watch_all = true
 follow_symlinks = true
